--- a/Biditfrontend/src/main/webapp/masterpage/css/Home.css
+++ b/Biditfrontend/src/main/webapp/masterpage/css/Home.css
@@ -12,24 +12,24 @@ color: white;
 text-align: center;
 font-size: 16px;
 }
-/*#menu ul li:hover
+#menu ul li:hover
 {
 background:linear-gradient(gray,white);
 border-radius: 5px;
 box-shadow: 1px 4px 26px 11px rgba(0,0,0,0.25);
-}*/
+}
 #menu ul li ul li a
 {
 font-weight: bold;
 color: white;
 text-align: center;
 }
-/*#menu ul li ul li a:hover
+#menu ul li ul li a:hover
 {
 background:linear-gradient(gray,white);
 border-radius: 5px;
 box-shadow: 1px 4px 26px 11px rgba(0,0,0,0.25);
-}*/
+}
 /*#cate a
 {
 font-weight: bold;
